tests/ui/generator/print/generator-print-verbose-2.drop_tracking.stderr
error: generator cannot be shared between threads safely
  --> $DIR/generator-print-verbose-2.rs:20:17
   |
LL |       assert_sync(|| {
   |  _________________^
LL | |
LL | |         let a = NotSync;
LL | |         yield;
LL | |         drop(a);
LL | |     });
   | |_____^ generator is not `Sync`
   |
   = help: within `[main::{closure#0} upvar_tys=() {NotSync, ()}]`, the trait `Sync` is not implemented for `NotSync`
note: generator is not `Sync` as this value is used across a yield
  --> $DIR/generator-print-verbose-2.rs:23:9
   |
LL |         let a = NotSync;
   |             - has type `NotSync` which is not `Sync`
LL |         yield;
   |         ^^^^^ yield occurs here, with `a` maybe used later
LL |         drop(a);
LL |     });
   |     - `a` is later dropped here
note: required by a bound in `assert_sync`
  --> $DIR/generator-print-verbose-2.rs:17:23
   |
LL |     fn assert_sync<T: Sync>(_: T) {}
   |                       ^^^^ required by this bound in `assert_sync`

error: generator cannot be sent between threads safely
  --> $DIR/generator-print-verbose-2.rs:27:17
   |
LL |       assert_send(|| {
   |  _________________^
LL | |
LL | |         let a = NotSend;
LL | |         yield;
LL | |         drop(a);
LL | |     });
   | |_____^ generator is not `Send`
   |
   = help: within `[main::{closure#1} upvar_tys=() {NotSend, ()}]`, the trait `Send` is not implemented for `NotSend`
note: generator is not `Send` as this value is used across a yield
  --> $DIR/generator-print-verbose-2.rs:30:9
   |
LL |         let a = NotSend;
   |             - has type `NotSend` which is not `Send`
LL |         yield;
   |         ^^^^^ yield occurs here, with `a` maybe used later
LL |         drop(a);
LL |     });
   |     - `a` is later dropped here
note: required by a bound in `assert_send`
  --> $DIR/generator-print-verbose-2.rs:18:23
   |
LL |     fn assert_send<T: Send>(_: T) {}
   |                       ^^^^ required by this bound in `assert_send`

error: aborting due to 2 previous errors

